# mcp_server_manager

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt
mcp_manager/: __init__.py  core_logic.py  mcp_server.py
templates/: index.html
